<resources>
    <string name="app_name">Github App</string>
    <string name="username">Username</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="repository">Repository</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="greeting">Hello,\nDevelopers!</string>
    <string name="wait_a_moment">Wait a moment...</string>
    <string name="url">URL</string>
    <string name="find_developers_here">Find developers here</string>

    <string name="tab_1">Followers</string>
    <string name="tab_2">Following</string>
    <string name="no_users">No users</string>
    <string name="avatar">Avatar</string>
    <string name="no_location">No location</string>
    <string name="no_company">No company</string>
    <string name="no_name">-</string>
    <string name="menu">Menu</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="favorite_user">Favorite User</string>
    <string name="dark_mode">Dark Mode</string>
    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
</resources>