<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvUsername"
                style="@style/Toolbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:gravity="center_vertical"
                app:layout_constraintBottom_toBottomOf="@+id/btnBack"
                app:layout_constraintStart_toEndOf="@+id/btnBack"
                app:layout_constraintTop_toTopOf="@+id/btnBack"
                tools:text="@string/username" />

            <ImageButton
                android:id="@+id/btnBack"
                style="@style/NavButton"
                android:contentDescription="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_back"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <ImageButton
                android:id="@+id/btnShare"
                style="@style/NavButton"
                android:layout_marginEnd="16dp"
                android:contentDescription="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_share"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <ToggleButton
                android:id="@+id/toggleFav"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/favorite_toggle"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textOff=""
                android:textOn=""
                app:layout_constraintBottom_toBottomOf="@+id/btnShare"
                app:layout_constraintEnd_toStartOf="@+id/btnShare"
                app:layout_constraintTop_toTopOf="@+id/btnShare" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivPhoto"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/avatar"
        android:elevation="1dp"
        app:civ_border_color="@color/colorBorder"
        app:civ_border_width="0.1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="ImageContrastCheck"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvName"
        style="@style/TextContent"
        android:layout_marginTop="8dp"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/ivPhoto"
        app:layout_constraintTop_toBottomOf="@+id/ivPhoto"
        tools:text="@string/name" />

    <TextView
        android:id="@+id/tvLocation"
        style="@style/TextContent"
        android:layout_marginTop="8dp"
        android:drawablePadding="4dp"
        android:textSize="12sp"
        android:visibility="gone"
        app:drawableStartCompat="@drawable/ic_location"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/tvName"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        tools:text="@string/location"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tvCompany"
        style="@style/TextContent"
        android:layout_marginTop="4dp"
        android:drawablePadding="4dp"
        android:textSize="12sp"
        android:visibility="gone"
        app:drawableStartCompat="@drawable/ic_company"
        app:layout_constraintStart_toStartOf="@+id/tvLocation"
        app:layout_constraintTop_toBottomOf="@+id/tvLocation"
        tools:text="@string/company"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/bg_progressbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/wait_a_moment"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/progressBar"
        app:layout_constraintStart_toStartOf="@+id/progressBar"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tvTotalRepo"
        style="@style/TextContent.Constraint.Detail"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tvTotalFollowers"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ivPhoto"
        app:layout_constraintTop_toTopOf="@+id/ivPhoto"
        tools:text="0" />

    <TextView
        android:id="@+id/tvTotalFollowing"
        style="@style/TextContent.Constraint.Detail"
        android:layout_marginEnd="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvTotalFollowers"
        app:layout_constraintTop_toTopOf="@+id/tvTotalRepo"
        tools:text="0" />

    <TextView
        android:id="@+id/tvTotalFollowers"
        style="@style/TextContent.Constraint.Detail"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tvTotalFollowing"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvTotalRepo"
        app:layout_constraintTop_toTopOf="@+id/tvTotalRepo"
        tools:text="0" />

    <TextView
        android:id="@+id/tvRepo"
        style="@style/TextContent.Constraint.Detail"
        android:layout_marginBottom="24dp"
        android:text="@string/repository"
        app:layout_constraintBottom_toBottomOf="@+id/ivPhoto"
        app:layout_constraintEnd_toStartOf="@+id/tvFollowers"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/tvTotalRepo" />

    <TextView
        android:id="@+id/tvFollowing"
        style="@style/TextContent.Constraint.Detail"
        android:text="@string/following"
        app:layout_constraintBottom_toBottomOf="@+id/tvRepo"
        app:layout_constraintEnd_toEndOf="@+id/tvTotalFollowing"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvFollowers" />

    <TextView
        android:id="@+id/tvFollowers"
        style="@style/TextContent.Constraint.Detail"
        android:text="@string/followers"
        app:layout_constraintBottom_toBottomOf="@+id/tvRepo"
        app:layout_constraintEnd_toStartOf="@+id/tvFollowing"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvRepo" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCompany"
        app:tabIndicatorColor="@color/colorControl"
        app:tabSelectedTextColor="@color/colorControl"
        tools:ignore="SpeakableTextPresentCheck"
        tools:visibility="visible" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>