<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground"
    app:cardBackgroundColor="@color/cardBackground"
    app:cardCornerRadius="8dp"
    app:cardElevation="1dp"
    app:cardMaxElevation="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/ivPhoto"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvUsername"
            style="@style/TextContent.Constraint"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivPhoto"
            app:layout_constraintTop_toTopOf="@+id/ivPhoto"
            tools:text="@string/username" />

        <TextView
            android:id="@+id/tvTotalFollowers"
            style="@style/TextContent.Constraint"
            android:layout_marginTop="8dp"
            android:drawablePadding="2dp"
            android:gravity="center_vertical"
            android:textSize="12sp"
            app:drawableStartCompat="@drawable/ic_followers"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvUsername"
            app:layout_constraintTop_toBottomOf="@+id/tvUsername"
            tools:text="@string/followers" />

        <TextView
            android:id="@+id/tvTotalRepo"
            style="@style/TextContent.Constraint"
            android:layout_marginStart="8dp"
            android:drawablePadding="2dp"
            android:gravity="center_vertical"
            android:textSize="12sp"
            app:drawableStartCompat="@drawable/ic_repo"
            app:layout_constraintEnd_toEndOf="@+id/tvUsername"
            app:layout_constraintStart_toEndOf="@+id/tvTotalFollowers"
            app:layout_constraintTop_toTopOf="@+id/tvTotalFollowers"
            tools:text="@string/repository" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>